--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,7 +27,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav text-center ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Join</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'room:lobby' %}">Join</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Host</a>
