--- a/templates/room_layout.html
+++ b/templates/room_layout.html
@@ -11,6 +11,7 @@
             Gather
         </title>
         <link rel="stylesheet" href=" {% static 'css/bootstrap/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/font-awesome/css/font-awesome.css' %}">
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <link rel="stylesheet" href="{% static 'css/room.css' %}">
         <script src="https://kit.fontawesome.com/5336f7ba15.js" crossorigin="anonymous"></script>
@@ -37,8 +38,9 @@
 </body>
 
 <script src="{% static 'js/bootstrap.min.js' %}"></script> 
-<script src="{% static 'agora/AgoraRTC_N-4.11.0.js' %}"></script> 
-<script src="{% static 'js/stream.js' %}"></script> 
+
+
+
 
 
 </html>
