--- a/room/templates/room/room.html
+++ b/room/templates/room/room.html
@@ -1,16 +1,82 @@
 {% extends 'room_layout.html' %}
+
 {% load static %}
+
 {% block content %}
 
-<section id="room-name-wrapper">
-    <p>Room Name: <span id="room-name"></span></p>
-</section>
+<nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html">
+        <img src="{% static 'img/gather-3.svg' %}" width="80%" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fa-solid fa-bars-staggered"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav text-center ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'room:lobby' %}">Join</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="#">Host</a>
+            </li>
+            {% if not request.user.is_authenticated %}
+            <li class="nav-item">
+            <a class="nav-link" href="{% url 'accounts:login' %}">Sign in</a>
+            </li>
+    
+            <li class="nav-item">
+            <a class="nav-btn shadow-none btn btn-outline-white" href="{% url 'accounts:signup' %}">Create account</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+            <a class="nav-link" href="{% url 'dashboard:dashboard' %}">Dashboard</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-btn shadow-none btn btn-outline-white" href="{% url 'accounts:logout' %}">Logout</a>
+            </li>
+            {% endif %}
+        </div>
+    </div>
+    </nav>
+
+
+
 
 <section class="video-streams" id="video-streams">
     <div class="container">
-        <div class="row justify-content-center" id="video-streams-container">
-    
-        
+        <div class="row justify-content-center">
+            <div class="col-lg-8 col-md-12 text-center">
+                <div class="row justify-content-center"  id="video-streams-container">
+                   
+                </div>
+            </div>
+            <div class="col-lg-4 mb-5">
+                <div class="chat-container">
+                    <div class="chat-title m-auto text-center mt-3">
+                        <h6>Live chat</h6>
+                        <p>Chat disappears after meeting ends</p>
+                    </div>
+                    <div class="chat-main">
+                        {% for m in messages %}
+
+                        <div class="message-container mb-3 d-flex p-2">
+                            <img src="{% static 'img/01.jpg' %}" class="rounded-circle" width="10%" alt="">
+                            <div class="message m-2">
+                                <span>{{m.content}}</span>
+                            </div>
+                        </div>
+
+                        {% endfor %}
+                    </div>
+                    <div class="chat-input d-flex text-center mb-5">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="type message" id="chat-message">
+                        </div>
+                        <i class="fa fa-send" id="send-btn" role="button"></i>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="row justify-content-center fixed-bottom m-auto">
             <div class="col-lg-3 m-auto  mt-3">
@@ -19,10 +85,16 @@
                     <i  alt="" class="fa fa-microphone" id="mic-btn"></i>
                 </div>
                 <div id="icon-wrapper" class="m-3">
-                    <i  alt="" class="fa fa-video" id="camera-btn"></i>
+                    <i  alt="" class="fa fa-camera" id="camera-btn"></i>
                 </div>
                 <div id="icon-wrapper" class="m-3">
-                    <i  alt="" class="fa fa-arrow-right" id="leave-btn"></i>
+                    <i  alt="" class="fa fa-file" id="screen-btn"></i>
+                </div>
+                <div id="icon-wrapper" class="m-3">
+                    <i  alt="" class="fa fa-bars" id="screen-btn"></i>
+                </div>
+                <div id="icon-wrapper" class="m-3">
+                    <i  alt="" class="fa fa-phone" id="leave-btn"></i>
                 </div>
             </div>
             </div>
@@ -32,6 +104,113 @@
    
 </section>
 
-{% endblock %}
+
+
+
+
+{% endblock content  %}
+
+{% block scripts %}
+<script  src="{% static 'agora/AgoraRTC_N-4.11.0.js' %}"></script> 
+<script type="text/javascript" src="{% static 'js/stream.js' %}"></script>
+
+
+
+{{ room.id|json_script:"json-roomname" }}
+{{ request.user.username|json_script:"json-username" }}
+
+<script>
+    const roomName = sessionStorage.getItem('room')
+    let userName = JSON.parse(document.getElementById('json-username').textContent)
+    const username = sessionStorage.getItem('name')
+    const uid = sessionStorage.getItem('UID')
+  
+    const chatSocket = new WebSocket(
+        'ws://'
+        + '127.0.0.1:8000'
+        + '/ws/'
+        +roomName
+        +'/'
+    );
+
+   
+    
+
+    await window.href(`/room/main-room/?room=${roomName}`, 'self')
+
+
+  
+
+    chatSocket.onclose = function(e){
+        console.log('end')
+    }
+
+    chatSocket.onmessage = function(e){
+        const data = JSON.parse(e.data);
+        console.log(e.data)
+        if (data.message){
+                document.querySelector('.chat-main').innerHTML +=  `<div class="message-container mb-3 d-flex p-2">
+                            <img src="{% static 'img/01.jpg' %}" class="rounded-circle" width="10%" alt="">
+                            <div class="message m-2">
+                                <span>${data.message}</span>
+                            </div>
+                        </div>`
+        }
+        else{
+            alert("Empty message");
+        }
+        scrollToBottom();
+    }
+
+
+    //
+
+   document.querySelector('#send-btn').onclick = function(e) {
+        e.preventDefault();
+
+        let messageInputDom = document.querySelector("#chat-message"); 
+       
+        let message = messageInputDom.value;
+        
+
+        console.log({
+            'message': message,
+            'username': username,
+            'room': roomName
+        })
+
+        chatSocket.send(JSON.stringify({
+            'message':message,
+            'username':username,
+            'room':roomName,
+            'uid':uid
+        }));
+
+        messageInputDom.value = ''
+
+        return false;
+
+
+    }
+
+    function scrollToBottom(){
+        const objDiv = document.querySelector(".chat-container")
+        objDiv.scrollTop = objDiv.scrollHeight;
+    }
+
+    
+
+
+scrollToBottom();
+
+</script>
+
+
+
+{% endblock scripts %}
+
+
+
+
 
 
