--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
             Gather
         </title>
         <link rel="stylesheet" href=" {% static 'css/bootstrap/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/font-awesome/css/font-awesome.css' %}">
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <script src="https://kit.fontawesome.com/5336f7ba15.js" crossorigin="anonymous"></script>
     </head>
