--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,7 @@
             Gather
         </title>
         <link rel="stylesheet" href=" {% static 'css/bootstrap/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/font-awesome.css' %}">
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <script src="https://kit.fontawesome.com/5336f7ba15.js" crossorigin="anonymous"></script>
     </head>
@@ -57,6 +58,12 @@
 
 
     {% block content %}
+
+    {% endblock %}
+
+
+
+    {% block scripts %}
 
     {% endblock %}
 
