--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -28,6 +28,7 @@
 
 
 
+
 #icon-wrapper .fa{
     cursor: pointer;
     padding: 20px;
@@ -48,6 +49,14 @@
 
 
 .chat-container{
+    height: 95vh;
+    border: 1px solid #920000;
+    width: 100%;
+    border-radius: 20px;
+    position: relative;
+}
+
+.modal .chat-container{
     height: 85vh;
     border: 1px solid #920000;
     width: 80%;
@@ -64,24 +73,18 @@
     font-size: 15px;
 }
 
-.chat-main{
+.chat-main, .modal-chat-main{
     padding: 0 10px;
     height: 400px;
     overflow-y: auto ;
 }
 
 
-
-.message-container img{
-    width: 17%;
-    margin: 0 3px;
-}
-
 .message{
-    padding: 5px 10px;
+    padding:10px;
     background: #fff;
     box-shadow: 0 0 6px rgba(73, 72, 72, 0.2);
-    border-radius: 100px;
+    border-radius: 10px;
     align-items: center;
 }
 
@@ -112,3 +115,47 @@
     color: #920000;
 }
 
+
+
+@media screen and (max-width: 476px) {
+    #icon-wrapper .fa{
+        padding: 10px !important;
+        margin:0;
+        font-size:17px !important;
+
+    }
+}
+
+
+@media screen and (max-width:576px) {
+    #icon-wrapper .fa{
+        cursor: pointer;
+        padding: 20px;
+        border-radius:5px;
+        color:#000;
+        background: #c4c4c4;
+        margin:0;
+        font-size: 15px;
+        margin: 0 auto;
+        justify-content: center;
+    }
+    
+
+.video-container{
+    border: 1px solid #920000;
+    border-radius: 5px;
+    max-height: 300px;
+    width: 100%;
+    padding: 30px;
+
+}
+    
+
+.video-streams{
+    height: 85vh;
+    width: 100%;
+    padding: 30px;
+}
+    
+    
+}
