--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,11 @@
         <link rel="stylesheet" href="{% static 'css/font-awesome/css/font-awesome.css' %}">
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <script src="https://kit.fontawesome.com/5336f7ba15.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+
+
+        
+        
     </head>
     <body>
         
@@ -74,19 +79,23 @@
     </div>
 </section>
 
+
+<script src="{% static 'js/jquery.min.js' %} "></script>
+<script src="{% static 'js/jquery-3.2.1.slim.min.js' %}"></script> 
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
 {% block scripts %}
 
-      
+
 
 {% endblock %}
 
 
 
 
-
-
 </body>
 
-<script src="{% static 'js/bootstrap.min.js' %}"></script> 
+
 
 </html>
