--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -61,7 +61,7 @@
         </div>
     </div>
 
-    <div class="col-lg-10">
+  <!--  <div class="col-lg-10">
         <div class="personal-heading">
             <h6>Meetings</h6>
         </div>
@@ -87,7 +87,7 @@
 
         </div>
     </div>
-
+-->
 </div>
 
 
