--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -33,14 +33,14 @@
 
                         <div class="col-lg-12">
                             <div class="form-group">
-                                <input type="text" placeholder="Enter your password" name="password" class="form-control mb-4 shadow-none">
+                                <input type="password" placeholder="Enter your password" name="password" class="form-control mb-4 shadow-none">
                             </div>
                         </div>
                         
 
                         <div class="col-lg-12">
                             <div class="form-group">
-                                <input type="text" placeholder="Confirm password" name="password2" class="form-control mb-4 shadow-none">
+                                <input type="password" placeholder="Confirm password" name="password2" class="form-control mb-4 shadow-none">
                             </div>
                         </div>
 
