--- a/dashboard/templates/dashboard/create-meeting.html
+++ b/dashboard/templates/dashboard/create-meeting.html
@@ -4,35 +4,59 @@
 
 {% block content %}
 
-<sector class="meeting">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8">
+        <div class="row justify-content-center  mt-2">
+            <div class="col-lg-8  mb-3  text-wine">
                 <h2>Create a meeting</h2>
             </div>
 
-            <div class="col-lg-8">
-                <form action="" class="form">
-                    <div class="col-lg-8">
-                        <div class="form-group  mb-3">
-                            <input type="text" placeholder="Input meeting name" class="form-control">
+            <div class="col-lg-8 text-wine form-meeting">
+               
+                    <form action="{% url 'dashboard:create_meeting' %}"   method="post" >
+                        {% csrf_token %}
+                        <div class="col-lg-12">
+                            <div class="form-group  mb-3">
+                                <input type="text"  required placeholder="Input meeting name" name="name" class="form-control form-input ">
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-8">
-                        <div class="form-group  mb-3">
-                            <input type="text" placeholder="Input start time" id="date1" class="form-control">
+                        <div class="col-lg-12">
+                            <div class="form-group  mb-3">
+                                <input type="text"  required placeholder="Input start time"  name="start" id="date1" class="form-control  form-input">
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-8">
-                        <div class="form-group  mb-3">
-                            <input type="text" placeholder="Input End time" id="date2" class="form-control">
+                        <div class="col-lg-12">
+                            <div class="form-group  mb-3">
+                                <input type="text"  required placeholder="Input End time" name="end"  id="date2" class="form-control  form-input">
+                            </div>
                         </div>
-                    </div>
-                </form>
+    
+                        <button type="submit" class="btn btn-outline-white m-btn">submit</button>
+                    </form>
             </div>
+
+            <div class="col-lg-8 mt-4">
+                <table class="table table-hover table-stripped  table-bordered">
+                    <th>Meeting Name</th>
+                    <th>Meeting Id</th>
+                    <th>Start Time</th>
+                    <th>End Time</th>
+                    <th>Created On</th>
+                    <th>Action</th>
+                    <tbody>
+                        {% for room in room %}
+                        <tr>
+                            <td>{{room.name}}</td>
+                            <td>{{room.uid}}</td>
+                            <td>{{room.start_time}}</td>
+                            <td>{{room.duration}}</td>
+                            <td>{{room.created_on}}</td>
+                            <td><a href="{% url 'dashboard:delete_meeting' room.id %}" class="btn btn-outline-white btn-danger">Delete</a></td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            
         </div>
-    </div>
-</sector>
 
 
 {% endblock %}
