--- a/room/templates/room/lobby.html
+++ b/room/templates/room/lobby.html
@@ -22,7 +22,7 @@
 
                         <div class="col-lg-12">
                             <div class="form-group">
-                                <input type="text"required placeholder="Room Name" name="room" class="form-control mt-4 mb-4 shadow-none">
+                                <input type="text"required placeholder="Room Id" name="room" class="form-control mt-4 mb-4 shadow-none">
                             </div>
                         </div>
 
@@ -59,12 +59,12 @@
 {% endif %}
 
 <script>
- let form = document.getElementById('form')
+let form = document.getElementById('form')
 let user_name = JSON.parse(document.getElementById('json-user_name').textContent)
 
 let handleSubmit = async (e) => {
     e.preventDefault()
-    let room = e.target.room.value.toUpperCase()
+    let room = e.target.room.value
     let name;
     if (user_name){
         name = user_name
