--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,7 @@
     <body>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html">
+              <a class="navbar-brand" href="{% url 'app:home' %}">
                 <img src="{% static 'img/gather-3.svg' %}" width="80%" alt="">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,9 +30,7 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'room:lobby' %}">Join</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Host</a>
-                  </li>
+              
                   {% if not request.user.is_authenticated %}
                   <li class="nav-item">
                     <a class="nav-link" href="{% url 'accounts:login' %}">Sign in</a>
@@ -42,6 +40,9 @@
                     <a class="nav-btn shadow-none btn btn-outline-white" href="{% url 'accounts:signup' %}">Create account</a>
                   </li>
                   {% else %}
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'dashboard:create_meeting' %}">Host</a>
+                  </li>
                   <li class="nav-item">
                     <a class="nav-link" href="{% url 'dashboard:dashboard' %}">Dashboard</a>
                   </li>
