--- a/room/templates/room/room.html
+++ b/room/templates/room/room.html
@@ -9,6 +9,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="meeting-time"><p id="time"></p></div>
+            <div class="text-dark"> <strong>{{room.name}}</strong></div>
             <div class="col-lg-8 col-md-12 text-center">
                 <div class="row justify-content-center"  id="video-streams-container">
                    
