--- a/room/templates/room/lobby.html
+++ b/room/templates/room/lobby.html
@@ -29,7 +29,7 @@
                         {% if not request.user.is_authenticated %}
                         <div class="col-lg-12">
                             <div class="form-group">
-                                <input type="text" required placeholder="Name" name="name" class="form-control mb-4 shadow-none">
+                                <input type="text" required placeholder="Guest Name" name="name" class="form-control mb-4 shadow-none">
                             </div>
                         </div>
                         {% endif %}
